Here we are adding MediaQuery

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <div class ="wrapper">
     <div class="box header">Header</div>
     <div class="box sidebar">Sidebar</div>
-    <div class="box sidebar2">Sidebar2</div>
     <div class="box content"> Lorem, ipsum dolor sit amet 
-        consectetur adipisicing elit. Suscipit ratione ut velit, perspiciatis vel facere, inven</div>
+        consectetur adipisicing elit.Suscipit ratione ut velit, perspiciatis vel facere<br> Suscipit ratione ut velit, perspiciatis vel facere, inven</div>
+    <div class="box sidebar2">Sidebar2</div>
+   
     <Header class="box footer">Footer</div>
 </div>
 <body>
